<resources>
    <string name="app_name">Higher Lower</string>
    <string name="higher">Higher</string>
    <string name="equals">Equals</string>
    <string name="quess_if_the_next_throw_is_going_to_be_lower_equal_or_higher">Quess if the next throw is going to be lower, equal or higher.</string>
    <string name="lower">Lower</string>
    <string name="todo">TODO</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="dice">Dice</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>
